<resources>
    <string name="app_name">Tic-Tac-Toe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Tic-Tac-Toe</string>
    <string name="cont">Continue Game</string>
    <string name="newW">New Game</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="hintName">Name of Game</string>
    <string name="hintP1">Player 1 name</string>
    <string name="hintP2">Player 2 name</string>
    <string name="hintLimit">Number of rounds</string>
    <string name="hintStart">Starting Round</string>
    <string name="start">Start Game</string>
    <string name="title_activity_open_game">OpenGameActivity</string>
    <string name="open">Choose a game to continue</string>
    <string name="title_activity_tic_tac_toe">TicTacToeActivity</string>
    <string name="game">Game Title</string>
    <string name="num_rounds">Number of rounds</string>
    <string name="player">Player: </string>
    <string name="tie">Tie</string>
    <string name="nRound">Next Round</string>
    <string name="reset">Reset</string>
    <string name="title_activity_winner">WinnerActivity</string>
</resources>
