<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff0000">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="50dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/bNew"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:text="@string/newW"
        android:textSize="30dp"
        android:textStyle="bold"
        android:onClick="newGame" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/bCont"
        android:layout_marginTop="59dp"
        android:text="@string/cont"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_below="@+id/bNew"
        android:layout_centerHorizontal="true"
        android:onClick="openGame" />
</RelativeLayout>
